--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
   ],
 
   mythics: [
-    {name:"Starshine Warrior", demand:"mid", normal:2, gold:5, rainbow:10, img:"https://8upload.com/image/409cbe0be76db7be/new_stat.png"}
+    {name:"Starshine Warrior", demand:"mid", normal:2, gold:5, rainbow:10, img:"https://tapinvalue.gamer.gd/nymyth.png"}
   ],
 
   exclusives: [
