--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
     {name:"Top 250 Trophy Guardian", demand:"high", normal:625, gold:2300, rainbow:2500, img:"https://i.postimg.cc/5Q9N1fww/250.png"},
     {name:"Top 10 Reindeer Emporer", demand:"mid", normal:12000, gold:"o/c", rainbow:"o/c", img:"https://8upload.com/image/dcd03e3b3d3fe07e/top_10.png"},
     {name:"Top 100 Snow Emperor", demand:"mid", normal:1200, gold:4600, rainbow:5000, img:"https://8upload.com/image/3b5c0a07efffa9dd/top_100.png"},
-    {name:"Top 250 Trophy Guardian", demand:"mid", normal:500, gold:1850, rainbow:1950, img:"https://8upload.com/image/d5d970cabf198b70/top_250.png"}
+    {name:"Top 250 Snow Warrior", demand:"mid", normal:500, gold:1850, rainbow:1950, img:"https://8upload.com/image/d5d970cabf198b70/top_250.png"}
   ],
 
   permanent: [
