--- a/index.html
+++ b/index.html
@@ -610,6 +610,10 @@
 
   permanent: [
     {name:"King Kraken", demand:"mid", normal:150, gold:700, rainbow:750, img:"https://i.postimg.cc/c6TLh8SY/kraken.png"},
+    {name:"Frost Queen", demand:"low", normal:25, gold:100, rainbow:125, img:"https://i.postimg.cc/0bQ2B25b/queen.png"},
+    {name:"Weeping Angel", demand:"low", normal:35, gold:125, rainbow:160, img:"https://i.postimg.cc/dLxtPPD2/weeping.png"},
+    {name:"Sakura Dominator", demand:"low", normal:40, gold:150, rainbow:180, img:"https://i.postimg.cc/Yh9qsqrV/sakura.png"},
+    {name:"Divine Dragon", demand:"low", normal:30, gold:100, rainbow:135, img:"https://i.postimg.cc/9zcfyYvr/divine-drag.png"},
     {name:"Orca Dominator", demand:"low", normal:35, gold:150, rainbow:200, img:"https://i.postimg.cc/pykLCnHC/orca.png"},
     {name:"Chocolate Maurader", demand:"low", normal:75, gold:325, rainbow:350, img:"https://i.postimg.cc/1VR5Pypc/choco.png"},
     {name:"Candy God", demand:"low", normal:35, gold:150, rainbow:175, img:"https://i.postimg.cc/ct14ZdQm/candy.png"},
