--- a/index.html
+++ b/index.html
@@ -648,6 +648,7 @@
     {name:"Evil Snowman", demand:"mid", normal:100, gold:300, rainbow:350, img:"https://i.postimg.cc/y3R30nrM/90.png"},
     {name:"Snow Thief", demand:"low", normal:50, gold:200, rainbow:250, img:"https://i.postimg.cc/QK7KcSnv/80.png"},
     {name:"Celestial Candycane", demand:"high", normal:900, gold:4000, rainbow:4200, img:"https://i.postimg.cc/bSnS1LBc/candy.png"},
+    {name:"2026 Star", demand:"high", normal:1100, gold:4250, rainbow:4500, img:"https://boniec.github.io/cosmovalues/images/2026%20Star.png"},
     {name:"Gift Mimic", demand:"low", normal:50, gold:200, rainbow:250, img:"https://i.postimg.cc/8FkvxRjC/75.png"},
     {name:"Hooded Krampus", demand:"mid", normal:500, gold:2000, rainbow:2100, img:"https://i.postimg.cc/0bpJQWSS/hooded.png"},
     {name:"Disco Lord", demand:"mid", normal:1200, gold:4500, rainbow:5000, img:"https://8upload.com/image/49098f59873d3dc0/disco.png"}
